# ai-trace-auditor

./: .aitrace.toml.example  .gitignore  BEST-IN-GAME-PLAN.md  CLAUDE.md  Dockerfile  EKLINE-INTEGRATION.md  INTEGRATIONS.md  LICENSE  PRODUCT-BRIEF.md  PRODUCT-MAP.md  PRODUCT.md  README.md  ROADMAP.md  action.yml  blog-draft.txt  deep-research-market-analysis.txt  fly.toml  langchain-issue-comment.txt  linkedin-post.txt  market-research-march-2026.txt  mcp-config.json  outreach-emails-ready.txt  outreach-emails.txt  outreach-log.md  pyproject.toml  report.txt  show-hn-draft.txt  stale-pr-pings.txt
.github/workflows/: publish.yml
docs/: custom-requirements.md  index.html  requirement-audit-2026-04-06.md
examples/: scheduled-compliance.yml
launch/: product-hunt-copy.md  show-hn-post.md
prs/: autogen-pr-description.md
requirements/best_practices/: llm_observability.yaml
requirements/eu_ai_act/: annex_iv.yaml  article_12.yaml  article_19.yaml  article_25.yaml  article_50.yaml
requirements/iso_42001/: management_system.yaml
requirements/nist_ai_rmf/: manage.yaml  measure.yaml
requirements/soc2_ai/: trust_services.yaml
sale/: buyer-list.md  demo-script.md  outreach-emails.md
spec/: ai-compliance-docs-spec.md
src/ai_trace_auditor/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py
tests/: conftest.py  test_config.py  test_validate_requirements.py
tests/fixtures/: langfuse_export.json  langgraph_conditional_trace.json  mcp_server_chain_trace.json  otel_chat_trace.json  otel_circular_delegation.json  otel_multi_agent_trace.json  raw_api_log.jsonl
tests/test_agent_friendly/: test_checker.py
tests/test_analysis/: test_dag.py  test_engine.py  test_multi_agent_integration.py  test_multi_agent_scorer.py
tests/test_comply/: test_comply_report.py  test_runner.py
tests/test_docs/: test_assembler.py  test_docs_report.py  test_sections.py
tests/test_evidence/: test_pack.py
tests/test_flow/: test_detector.py  test_mermaid.py  test_ropa.py
(+146 files in other folders)
